@@ -1,3 +1,4 @@
+5/24/13 use rgb values for solute colors
 5/24/13 partial port of beaker view
 5/24/13 model ported from Java to JS
 5/24/13 set up skeleton for Molarity sim
